--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     </head>
     <body>
         <header>
+            <!-- Navigation bar -->
             <nav>
                 <ul>
                     <li>
-                        <a href="/"><img src="images/Logo.jpg" alt="logo" width="115"></a>
+                        <a href="/"
+                            ><img src="images/Logo.jpg" alt="logo" width="115"
+                        /></a>
                     </li>
                     <li>Studio</li>
                     <li>Portfolio</li>
@@ -18,12 +21,91 @@
                 </ul>
             </nav>
 
+            <!-- Contacts bar -->
             <address>
                 <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+1100011111111">+11 (000) 111-11-11</a></li>
+                    <li>
+                        <a href="mailto:info@devstudio.com"
+                            >info@devstudio.com</a
+                        >
+                    </li>
+                    <li>
+                        <a href="tel:+1100011111111">+11 (000) 111-11-11</a>
+                    </li>
                 </ul>
             </address>
         </header>
+
+        <main>
+            <!-- First section -->
+            <section>
+                <h1>Effective Solutions for Your Business</h1>
+                <button type="button">Order Service</button>
+            </section>
+
+            <!-- Second section -->
+            <section>
+                <ul>
+                    <li>
+                        <h2>Strategy</h2>
+                        <p>
+                            Our goal is to identify the business problem to walk
+                            away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li>
+                        <h2>Punctuality</h2>
+                        <p>
+                            Bring the key message to the brand's audience for
+                            the best price within the shortest possible time.
+                        </p>
+                    </li>
+                    <li>
+                        <h2>Diligence</h2>
+                        <p>
+                            Research and confirm brands that present the
+                            strongest digital growth opportunities and minimize
+                            risk.
+                        </p>
+                    </li>
+                    <li>
+                        <h2>Technologies</h2>
+                        <p>
+                            Design practice focused on digital experiences. We
+                            bring forth a deep passion for problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- Third section -->
+            <section>
+                <h2>Our Team</h2>
+
+                <ul>
+                    <li>
+                        <img src="images/img1.jpg" alt="Mark Guerro Product Designer photo" width="264" height="260">
+                        <h3>Mark Guerro</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="images/img2.jpg" alt="Tom Ford Frontend developer photo" width="264" height="260">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend developer</p>
+                    </li>
+                    <li>
+                        <img src="images/img3.jpg" alt="Camila Garcia Marketing photo" width="264" height="260">
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="images/img4.jpg" alt="Daniel Wilson UI Designer photo" width="264" height="260">
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
+            
+        </main>
     </body>
 </html>
