--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <ul>
                     <li>
                         <a href="/"
-                            ><img src="images/Logo.jpg" alt="logo" width="115"
+                            ><img src="images/Logo.jpg" alt="logo" width="115" height="24"
                         /></a>
                     </li>
                     <li>Studio</li>
@@ -84,28 +84,55 @@
 
                 <ul>
                     <li>
-                        <img src="images/img1.jpg" alt="Mark Guerro Product Designer photo" width="264" height="260">
+                        <img
+                            src="images/img1.jpg"
+                            alt="Mark Guerro Product Designer photo"
+                            width="264"
+                            height="260"
+                        />
                         <h3>Mark Guerro</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="images/img2.jpg" alt="Tom Ford Frontend developer photo" width="264" height="260">
+                        <img
+                            src="images/img2.jpg"
+                            alt="Tom Ford Frontend developer photo"
+                            width="264"
+                            height="260"
+                        />
                         <h3>Tom Ford</h3>
                         <p>Frontend developer</p>
                     </li>
                     <li>
-                        <img src="images/img3.jpg" alt="Camila Garcia Marketing photo" width="264" height="260">
+                        <img
+                            src="images/img3.jpg"
+                            alt="Camila Garcia Marketing photo"
+                            width="264"
+                            height="260"
+                        />
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="images/img4.jpg" alt="Daniel Wilson UI Designer photo" width="264" height="260">
+                        <img
+                            src="images/img4.jpg"
+                            alt="Daniel Wilson UI Designer photo"
+                            width="264"
+                            height="260"
+                        />
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
-            
         </main>
+
+        <footer>
+            <img src="images/Logo.jpg" alt="logo" width="115" height="24" />
+            <p>
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+            </p>
+        </footer>
     </body>
 </html>
