Making footer logo image a link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                 <ul>
                     <li>
                         <a href="/"
-                            ><img src="images/Logo.jpg" alt="logo" width="115" height="24"
+                            ><img
+                                src="images/Logo.jpg"
+                                alt="logo"
+                                width="115"
+                                height="24"
                         /></a>
                     </li>
                     <li>Studio</li>
@@ -128,7 +132,14 @@
         </main>
 
         <footer>
-            <img src="images/Logo.jpg" alt="logo" width="115" height="24" />
+            <a href="/"
+                ><img
+                    src="images/Logo.jpg"
+                    alt="logo"
+                    width="115"
+                    height="24"
+                />
+            </a>
             <p>
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.
