--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
         <header>
             <!-- Navigation bar -->
             <nav>
+                <a href="./index.html">WebStudio</a>
                 <ul>
-                    <li>
-                        <a href="/"
-                            ><img
-                                src="images/Logo.jpg"
-                                alt="logo"
-                                width="115"
-                                height="24"
-                        /></a>
-                    </li>
-                    <li>Studio</li>
-                    <li>Portfolio</li>
-                    <li>Contacts</li>
+                    <li><a href="">Studio</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Contacts</a></li>
                 </ul>
             </nav>
 
@@ -34,7 +26,7 @@
                         >
                     </li>
                     <li>
-                        <a href="tel:+1100011111111">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
