--- a/index.html
+++ b/index.html
@@ -124,14 +124,7 @@
         </main>
 
         <footer>
-            <a href="/"
-                ><img
-                    src="images/Logo.jpg"
-                    alt="logo"
-                    width="115"
-                    height="24"
-                />
-            </a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.
