--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
                 <ul>
                     <li>
                         <img
-                            src="images/img1.jpg"
-                            alt="Mark Guerro Product Designer photo"
+                            src="./images/img1.jpg"
+                            alt="Mark Guerrero Product Designer photo"
                             width="264"
                             height="260"
                         />
-                        <h3>Mark Guerro</h3>
+                        <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
                         <img
-                            src="images/img2.jpg"
-                            alt="Tom Ford Frontend developer photo"
+                            src="./images/img2.jpg"
+                            alt="Tom Ford Frontend Developer photo"
                             width="264"
                             height="260"
                         />
                         <h3>Tom Ford</h3>
-                        <p>Frontend developer</p>
+                        <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img
-                            src="images/img3.jpg"
+                            src="./images/img3.jpg"
                             alt="Camila Garcia Marketing photo"
                             width="264"
                             height="260"
@@ -112,7 +112,7 @@
                     </li>
                     <li>
                         <img
-                            src="images/img4.jpg"
+                            src="./images/img4.jpg"
                             alt="Daniel Wilson UI Designer photo"
                             width="264"
                             height="260"
